@@ -34,6 +34,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+@Deprecated
 public class SequenceFilesFromLuceneStorageDriverTest extends AbstractLuceneStorageTest {
 
   private SequenceFilesFromLuceneStorageDriver driver;
