@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.11.0 - unreleased
 
+  MAHOUT-1744: Deprecate lucene2seq (apalumbo)
+
   MAHOUT-1757: small fix in spca formula (smarthi)
 
   MAHOUT-1756: Missing +=: and *=: operators on vectors (smarthi)
